# GCP-Lakehouse-From-Scratch

./: .gitignore  Makefile  README.md  dataform.json  package-lock.json  package.json  requirements.txt  workflow_settings.yaml
.github/workflows/: cd-dev.yml  ci.yml  terraform-dev.yml  terraform-staging.yml  wif-smoke-test.yml
.tmp_sql_rendered/: 02_curated_sample.sql
config/: env.yaml
configs/: env.dev.yaml  profiles.yaml  projects.yaml
data/: sample.parquet
dataform/: dataform.json  workflow_settings.yaml
dataform/includes/: constants.js
definitions/: hello.sqlx
definitions/00_sources/: decl_orders.sqlx  decl_raw_orders.sqlx  decl_sales_transactions.sqlx  decl_sample_ext.sqlx  src_curated_customer_iceberg.sqlx  src_raw_orders.sqlx  (+2 more)
includes/: constants.js
orchestration/: pyproject.toml
orchestration/src/lakehouse_cli/: cli.py  config.py  dataproc.py  gcs.py  logging_utils.py  utils.py
orchestration/src/lakehouse_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: _env.py  bootstrap_projects.py  bootstrap_venv.py  create_tf_backend_bucket.py  fix_bq_dataset_access_env.py  run_dataform_workflow.py  run_dataform_workflow_env.py  test_bigquery_curated_table.py  test_bigquery_curated_table_env.py  test_bigquery_external_table.py  test_bigquery_external_table_env.py  upload_sample_to_gcs.py  upload_sample_to_gcs_env.py  upload_sample_to_raw.py
terraform/: README.md  dataform_secret.tf  main.tf  outputs.tf  plan-dev.out  plan.out  providers.tf  secret_dataform_git_token.tf  variables.tf
(+72 files in other folders)
